# MODFLOW-NWT

./: .gitattributes  CMakeLists.txt  Readme.txt  Release.txt  SWR1_AdditionsForNWT_1.01.0.txt  SWRProcess_release.txt  Summary_MODFLOW-NWT.txt  release.txt
data/: Pr1a_MF2005.bat  Pr1a_MFNWT.bat  Pr1b_MF2005.bat  Pr1b_MFNWT.bat  Pr2_MF2005.bat  Pr2_MFNWT.bat  Pr3_MF2005_higher.bat  Pr3_MF2005_higher_64.bat  Pr3_MFNWT_higher.bat  Pr3_MFNWT_higher_64.bat  Pr3_MFNWT_lower.bat  Pr3_MFNWT_lower_64.bat  SFR_LAK_floodplain.bat  Sfr2weltab_MFNWT.bat  UZFtestoptions.bat  l1b2k_bath.bat  run_all.bat
data/Ag_EP1a/: AgTest1A.py  Agwater1_high.nam  Agwater1_low.nam  readme.txt
data/Ag_EP1a/input/: Agwater1.ag  Agwater1.gag  Agwater1.nwt  Agwater1.oc  Agwater1.sfr  seg1_low.tab  seg9.tab
data/Ag_EP1b/: AgTest1B.py  Agwater1_high.nam  Agwater1_low.nam  readme.txt
data/Ag_EP1b/input/: Agwater1.ag  Agwater1.gag  Agwater1.nwt  Agwater1.sfr  Agwater1.upw  Agwater1.wel  Agwater1_high.uzf  Agwater1_low.uzf  seg1.tab  seg9.tab
data/Ex_prob1a/: Pr1a.BA6  Pr1a.DIS  Pr1a.NWT  Pr1a.OC  Pr1a.PCG  Pr1a.UPW  Pr1a_MF2005.nam  Pr1a_MFNWT.nam
data/Ex_prob1b/: Pr1b.BA6  Pr1b.DIS  Pr1b.LPF  Pr1b.NWT  Pr1b.OC  Pr1b.RCH  Pr1b.UPW  Pr1b_MF2005.nam  Pr1b_MFNWT.nam
data/Ex_prob2/: Pr2.ba6  Pr2.dis  Pr2.lpf  Pr2.nwt  Pr2.oc  Pr2.pcg  Pr2.rch  Pr2.upw  Pr2MF2005.nam  Pr2MFNWT.nam
data/Ex_prob3/: Pr3.LPF  Pr3.nwt  Pr3.oc  Pr3_MF2005_higher.nam  Pr3_MF2005_higher_64.nam  Pr3_MFNWT_higher.nam  Pr3_MFNWT_higher_64.nam  Pr3_MFNWT_lower.nam  Pr3_MFNWT_lower_64.nam  Pr3_higher.rch
data/Lake_bath_example/: l1b2k_bath.lak  l1b2k_bath.nam  l1b2k_bath.oc
data/SFR_LAK_floodplain/: Class Exercise 2.docx  SFR_LAK_floodplain.nam  gsflow_modflow.control
data/SFR_LAK_floodplain/input/: SFR_LAK_floodplain.ba6  SFR_LAK_floodplain.dis  SFR_LAK_floodplain.gag  SFR_LAK_floodplain.ghb  SFR_LAK_floodplain.lak  SFR_LAK_floodplain.nwt  SFR_LAK_floodplain.oc  SFR_LAK_floodplain.sfr  SFR_LAK_floodplain.tab  SFR_LAK_floodplain.upw  SFR_LAK_floodplain.uzf  SFR_LAK_floodplain.wel  SFR_LAK_floodplain_bath.txt
data/SWI_data_files/: RunSWI2NWTSample.bat  RunSWI2NWTSample_64.bat  swi2ex4sww.nam  swi2ex4sww.nwt  swi2ex4sww.upw  swi2ex4sww.wel  swi2ex4sww_64.nam
data/SWR_data_files/: README.txt  RunAllNWTSamples.bat  RunAllNWTSamples_64.bat  RunSWRNWTSample.bat  RunSWRNWTSample_64.bat
data/SWR_data_files/SWRSample01/: SWRSample01.01min.nam  SWRSample01.01min.swr  SWRSample01.lpf  SWRSample01.nam  SWRSample01.swr
data/SWR_data_files/SWRSample02/: SWRSample02.02.nam  SWRSample02.02.swr  SWRSample02.nam
data/SWR_data_files/SWRSample03/: SWRSample03.nam  SWRSample03.swr
data/SWR_data_files/SWRSample04/: SWRSample04.nam  SWRSample04.swr
data/SWR_data_files/SWRSample04/HEC-RAS/: SWRSample04_HECRAS.csv
data/SWR_data_files/SWRSample05/: Netrech.txt  SWRSample05-nwt.nam  SWRSample05-nwt_64.nam  SWRSample05.dis  SWRSample05.ghb  SWRSample05.nwt  SWRSample05.swr  SWRSample05.upw  SWRSample05.uzf
data/SWR_data_files/SWRSample05/Rainfall/: DailyRainfall.csv  WetlandStage.csv
data/SWR_data_files/SWRSample05/ref/: Rainfall_000.ref  Rainfall_007.ref  Rainfall_019.ref  Rainfall_027.ref  Rainfall_028.ref  Rainfall_031.ref  Rainfall_032.ref  Rainfall_033.ref  Rainfall_037.ref  Rainfall_047.ref  Rainfall_049.ref  Rainfall_057.ref  Rainfall_075.ref  Rainfall_077.ref  Rainfall_086.ref  Rainfall_087.ref  Rainfall_088.ref  Rainfall_103.ref  Rainfall_104.ref  Rainfall_105.ref  Rainfall_119.ref  Rainfall_120.ref  Rainfall_121.ref  Rainfall_123.ref  Rainfall_124.ref  Rainfall_125.ref  Rainfall_132.ref  Rainfall_137.ref  Rainfall_140.ref  Rainfall_146.ref  Rainfall_157.ref  Rainfall_159.ref  Rainfall_160.ref  Rainfall_161.ref  Rainfall_163.ref  Rainfall_169.ref  Rainfall_170.ref  Rainfall_172.ref  Rainfall_174.ref  Rainfall_181.ref  (+77 more)
data/Sfr2weltab/: Sfr2weltab.nam  Sfr2weltab.nwt  Sfr2weltab.oc  Sfr2weltab.sfr  Sfr2weltab.upw  Sfr2weltab.wel  weltab2.txt
data/UZF_cap_ET/: UZF_cap_ET.nam
data/UZF_cap_ET/input/: UZF_cap_ET.dis  UZF_cap_ET.gag  UZF_cap_ET.ghb  UZF_cap_ET.uzf  seg1.tab
data/UZF_cap_ET/output/: readme.txt
data/UZF_testproblem1/: Prob1.dis  Prob1.gag  Prob1.nam  Prob1.oc  Prob1.sfr  prob1.bas  prob1.nwt  prob1.upw
data/UZF_testproblem2/: UZFtest2.ba6  UZFtest2.dis  UZFtest2.nam  UZFtest2.nwt  UZFtest2.oc  UZFtest2.upw  UZFtest2.uzf
data/Uzf_testoptions/: UZFtestoptions.nam  UZFtestoptions.nwt  UZFtestoptions.oc  UZFtestoptions.sfr  UZFtestoptions.upw  UZFtestoptions.uzf  UZFtestoptions.wel
doc/: Input_instructions_AG.docx  Updated_SFR2_input_instructions_NWT.docx  Updated_UZF_input_instructions_NWT.docx
output_test/: Agwater1a_high.lst  Agwater1a_low.lst  Agwater1b_high.lst  Agwater1b_low.lst  Pr1aMF2005.LST  Pr1aMFNWT.LST  Pr1bMF2005.LST  Pr1bMFNWT.LST  Pr2MF2005.LST  Pr2MFNWT.LST  Pr3_MF2005_higher.lst  Pr3_MFNWT_higher.lst  Pr3_MFNWT_lower.lst  SFR_LAK_floodplain.lst  Sfr2weltab.lst  UZF_cap_ET.lst  UZFtest2.lst  UZFtestoptions.lst  l1b2k_bath.lst
output_test/output_test_swi/: swi2ex4sww.lst
output_test/output_test_swr1/: SWRSample01.01min.lst  SWRSample01.lst  SWRSample02.lst  SWRSample03.lst  SWRSample04.lst
output_test_64/: Pr3_MF2005_higher.lst  Pr3_MF2005_higher_64.lst  Pr3_MFNWT_higher.lst  Pr3_MFNWT_higher_64.lst  Pr3_MFNWT_lower.lst  Pr3_MFNWT_lower_64.lst
output_test_64/output_test_swi_64/: swi2ex4sww.lst  swi2ex4sww_64.lst
output_test_64/output_test_swr1_64/: SWRSample01.01min.lst  SWRSample01.lst  SWRSample02.lst  SWRSample03.lst  SWRSample04.lst
src/: CMakeLists.txt  Irestart.f  MF_NWT.f  Makefile  NWT1_gmres.f90  NWT1_ilupc_mod.f90  NWT1_module.f  NWT1_solver.f  NWT1_xmd.f  NWT1_xmdlib.f  de47_NWT.f  gsol7.f  gwf2ag1_NWT_mf.f  gwf2bas7.f  gwf2bas7_NWT.f  gwf2chd7.f  gwf2drn7.f  gwf2drn7_NWT.f  gwf2drt7.f  gwf2evt7.f  gwf2fhb7.f  gwf2gag7.f  gwf2ghb7.f  gwf2ghb7_NWT.f  gwf2hfb7_NWT.f  gwf2huf7.f  gwf2hydmod7.f  gwf2ibs7.f  gwf2lak7_NWT.f  gwf2lpf7.f  gwf2mnw17_NWT.f  gwf2mnw27_NWT.f  gwf2mnw2i7.f  gwf2res7.f  gwf2riv7.f  gwf2riv7_NWT.f  gwf2sfr7_NWT.f  gwf2str7.f  gwf2sub7.f  gwf2sub7_NWT.f  (+30 more)
(+15 files in other folders)
